feat: added api endpoint to return all nested containers for any given location
